# solana-voting-anchor-vs-native

./: .gitmodules  README.md  build_all.sh  run_all_tests.sh  run_bench.sh
ANCHOR/: Cargo.toml
ANCHOR/src/: errors.rs  lib.rs
ANCHOR/src/instructions/: candidate.rs  mod.rs  pull.rs  voting.rs
ANCHOR/src/state/: candidate.rs  mod.rs  pull.rs  voter.rs
ANCHOR/tests/: basic.rs  closing.rs  danger_basic.rs  danger_closing.rs
ANCHOR/tests/common/: caller.rs  ix_builder.rs  mod.rs
ANCHOR_ZERO_COPY/: Cargo.toml
ANCHOR_ZERO_COPY/src/: errors.rs  lib.rs
ANCHOR_ZERO_COPY/src/state/: mod.rs
NATIVE/: Cargo.toml
NATIVE/src/: constants.rs  error.rs  lib.rs
NATIVE/src/instructions/: close_candidate.rs  close_pull.rs  close_vote.rs  create_candidate.rs  create_pull.rs  create_vote.rs  mod.rs  voting.rs
NATIVE/src/processor/: close_candidate.rs  close_pull.rs  close_vote.rs  create_candidate.rs  create_pull.rs  create_vote.rs  mod.rs  voting.rs  voting2.rs  voting3.rs
NATIVE/src/sdk/: cu_measuring.rs  error.rs  mod.rs  off_chain.rs  prelude.rs  system_program.rs  utils.rs
NATIVE/src/sdk/pod_types/: align8.rs  bool.rs  enum.rs  enumerate.rs  mod.rs  option.rs  string.rs
NATIVE/src/state/: candidate.rs  mod.rs  pull.rs  voter.rs
NATIVE/tests/: basic.rs  closing.rs  danger_basic.rs  danger_closing.rs
NATIVE/tests/common/: caller.rs  ix_builder.rs  mod.rs
tests-unified/: Cargo.toml
tests-unified/benchmark/: versus.rs
tests-unified/src/: lib.rs
tests-unified/src/anchor/: mod.rs
tests-unified/src/anchor_zero_copy/: mod.rs
tests-unified/src/native/: mod.rs
tests-unified/tests/: basic.rs  closing.rs  danger_basic.rs  danger_closing.rs
tests-unified/tests/common/: mod.rs
tests-unified/tests/common/anchor/: mod.rs
tests-unified/tests/common/native/: mod.rs
