[package]
name = "anchor_vote"
version = "0.1.0"
description = "Default anchor-based smart-contract for voting"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_vote"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "1.0"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
