[package]
name = "zero_copy_anchor_vote"
version = "0.1.0"
description = "Anchor Zero Copy version of voting smart-contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zero_copy_anchor_vote"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "1.0"
bytemuck = { version = "1.25.0", features = ["derive"] }
dummy-sdk = { path = "../NATIVE/dummy-sdk" } # for POD wrappers

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
