[package]
name = "native_voter_cheap"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "4.0.0"
solana-system-interface = { version = "3.2.0", features = ["bincode"] }
bytemuck = { version = "1.25.0", features = ["derive"] }

[features]
no-entrypoint = []

[lints.rust]
unused = { level = "allow", priority = -1 } # For exploratory dev.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }

[dev-dependencies]
litesvm = "0.11.0"
solana-sdk = "3.0"
