[package]
name = "native_voter_cheap"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "4.0.0"
solana-system-interface = { version = "3.2.0", features = ["bincode"] }
bytemuck = { version = "1.25.0", features = ["derive"] }
thiserror = "2.0"
paste = "1.0"
dummy-sdk = { path = "dummy-sdk" }

# todo: only there (not solana)
anyhow = "1.0.102"
num_enum = "0.7.6"
solana-program-entrypoint = "3.1.1"

[features]
default = []
custom-heap = []
custom-panic = []
no-entrypoint = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
# unused = { level = "allow", priority = -1 } # For exploratory dev.
