[package]
name = "tests-unified"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "3.0"
litesvm = "0.11.0"
bytemuck = { version = "1.25.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"

# -- Optional dependencies for features --
# anchor:
anchor-lang = { version = "1.0", optional = true }
anchor_vote = { path = "../ANCHOR", optional = true }
anchor_zero_copy = { path = "../ANCHOR_ZERO_COPY", optional = true }

# native:
native_voter_cheap = { path = "../NATIVE", optional = true }
dummy-sdk = { path = "../NATIVE/dummy-sdk", optional = true }
# --

[features]
# default = ["anchor"]
anchor = ["dep:anchor_vote", "dep:anchor-lang"]
anchor-zero-copy = ["dep:anchor_zero_copy", "dep:anchor-lang", "dep:dummy-sdk"]
native = ["dep:native_voter_cheap", "dep:dummy-sdk"]

[[test]]
name = "basic"
path = "tests/basic.rs"

[[test]]
name = "closing"
path = "tests/closing.rs"

[[test]]
name = "danger_basic"
path = "tests/danger_basic.rs"

[[test]]
name = "danger_closing"
path = "tests/danger_closing.rs"
